<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    <item 	android:id="@+id/menu_reboot" 
        	android:title="@string/menu_reboot"
        	android:icon="@drawable/icon_replay"
          	android:orderInCategory="100"
        	android:showAsAction="ifRoom" />
    
    <item 	android:id="@+id/menu_refresh" 
        	android:title="@string/menu_refresh"
            android:icon="@drawable/icon_refresh"
        	android:orderInCategory="200"
        	android:showAsAction="ifRoom" />
    
    <item 	android:id="@+id/menu_settings"
        	android:title="@string/menu_settings"
        	android:icon="@drawable/icon_replay"
        	android:orderInCategory="300"
        	android:showAsAction="never" />

    <item 	android:id="@+id/menu_clear_widgets"
        	android:title="@string/menu_clear_widgets"
        	android:icon="@drawable/icon_replay"
        	android:orderInCategory="310"
        	android:showAsAction="never" />

</menu>
