<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/terracontrol_splash" 
    >
    
<!-- 
    <ImageView
        android:id="@+id/splash_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/terracontrol_splash" />
 -->    

    <TextView
        android:id="@+id/versionLine1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/splash_version"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/splash_version_text" />

    <TextView
        android:id="@+id/versionLine2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/versionLine1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:text="@string/splash_version_date"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/splash_version_text" />

    <TextView
        android:id="@+id/author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/splash_author"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/splash_version_text" />

</RelativeLayout>